fix(MSHOP-71): Updated swagger documentation
