# mshop-account-service/docs/swagger.json
@@ -94,6 +94,11 @@
         },
         "/api/v1/register": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Receives user and organization registration data together and returns confirmation message",
                 "consumes": [
                     "application/json"
